# pycollimator

./: .gitignore  CLA.md  LICENSE.header.txt  README.md  mkdocs.yml  package.json  pyproject.toml  pytest.ini  requirements.ci.txt  requirements.docs.txt  requirements.in
.github/workflows/: build-and-publish-docs.yml
collimator/: __init__.py  _init.py  lazy_loader.py  logging.py  profiling.py  version.py
collimator/backend/: __init__.py  _torch.py  backend.py  backend.pyi  ode_solver.py  results_data.py  typing.py  utils.py
collimator/cli/: __init__.py  cli_run.py  collimator_cli.py  model_interface.py  run_fit_sindy.py  run_optimization.py  run_wildcat.py
collimator/dashboard/: __init__.py  api.py  ensemble.py  model.py  project.py  results.py  schemas.py  uiprops.py  utils.py
collimator/experimental/: __init__.py
collimator/framework/: __init__.py  build_recorder.py  cache.py  context.py  context_factory.py  dependency_graph.py  diagram.py  diagram_builder.py  error.py  event.py  leaf_system.py  parameter.py  port.py  pprint.py  state.py  system_base.py  system_decorators.py
collimator/models/: __init__.py  acrobot.py  battery_ecm.py  bouncing_ball.py  cartpole.py  compact_ev.py  compass_gait.py  fitzhugh_nagumo.py  hairer.py  lotka_volterra.py  pendulum.py  planar_quadrotor.py  rimless_wheel.py  van_der_pol.py
collimator/optimization/: __init__.py  pid_autotuning.py  rl_env.py  training.py  ui_jobs.py
collimator/simulation/: __init__.py  simulator.py  types.py
collimator/testing/: __init__.py  markers.py  runtime_test.py  util.py
docs/: about.md  api.md  framework.md  index.md  installation.md  library.md  optimization.md  pycollimator.md  simulation.md  wildcat.md
docs/examples/: 01_quadcopter_modelling.ipynb  02_quadcopter_trajectory_generation.ipynb  03_quadcopter_nonlinear_mpc.ipynb  04_flip_trajectory_optimization.ipynb  MLP_training.ipynb  bouncing_ball.ipynb  dashboard_submodel.ipynb  energy_shaping_and_lqr.ipynb  index.md  interacting_with_the_dashboard.ipynb  limit_cycles.ipynb  linear_mpc.ipynb  lqr.ipynb  part_1_battery_ecm_model.ipynb  part_2_parameter_estimation_synthetic_data.ipynb  part_3_parameter_estimation_real_data.ipynb  part_4_data_driven_battery_models_DMDc.ipynb  part_5_data_driven_battery_models_eDMDc.ipynb  part_6_data_driven_battery_models_SINDyc.ipynb  part_7_data_driven_battery_models_Neural_Networks.ipynb  pid_autotuning_interactive.ipynb  pid_tuning.ipynb  primitives.ipynb  state_estimation_with_Kalman_filters.ipynb  trajectory_optimization_and_stabilization.ipynb  ude_and_sr_lotka_volterra.ipynb
docs/javascripts/: katex.js  mathjax.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
pycollimator/: __init__.py  api.py  diagrams.py  global_variables.py  hash.py  models.py  projects.py  results.py  simulation_hashed_file.py  simulations.py  utils.py
pycollimator/wildcat/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.in
pycollimator/wildcat/lynx/: __init__.py  binary_results.py  logging.py  profiling.py
pycollimator/wildcat/lynx/cli/: __init__.py  block_interface.py  lynx_cli.py  model_interface.py  types.py  wc_to_cl_converter.py
pycollimator/wildcat/lynx/dashboard/: __init__.py  api.py  model.py  project.py  schemas.py
pycollimator/wildcat/lynx/framework/: __init__.py  cache.py  context.py  context_factory.py  dependency_graph.py  diagram.py  diagram_builder.py  error.py  event.py  leaf_system.py  port.py  state.py  system_base.py
pycollimator/wildcat/lynx/math_backend/: __init__.py  backend.py  casadi.py  jax.py  numpy.py  torch.py  typing.py
pycollimator/wildcat/lynx/optimization/: __init__.py  training.py
pycollimator/wildcat/lynx/simulation/: __init__.py  ode_solver.py  rk4.py  simulator.py  solution.py  types.py
pycollimator/wildcat/lynx/testing/: __init__.py  runtime_test.py  util.py
pycollimator/wildcat/lynx/testing/models/: __init__.py  bouncing_ball.py  compact_ev.py  compass_gait.py  fitzhugh_nagumo.py  lotka_volterra.py  pendulum.py  quadrotor.py  rimless_wheel.py  van_der_pol.py
test/: conftest.py  gen_datasource_csv.py
(+365 files in other folders)
