[build-system]
requires = ["setuptools >= 65", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "pycollimator"
readme = "README.md"
description = "Collimator.ai core simulation engine and API client"
requires-python = ">=3.10"
authors = [{ name = "Collimator", email = "support@collimator.ai" }]
dynamic = ["dependencies"]
license = { text = "AGPLv3" }

# Keep in sync with version.py
version = "2.0.6"

# See https://pypi.org/classifiers/
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  # These will have to be updated:
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.urls]
"Homepage" = "https://www.collimator.ai"
"Documentation" = "https://py.collimator.ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["collimator.testing*", "test*", "examples*"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[project.scripts]
collimator_cli = "collimator.cli.collimator_cli:cli"

[project.optional-dependencies]

# NMPC requires IPOPT to be preinstalled and maybe cmake on macOS
nmpc = ["cyipopt ~= 1.3.0", "osqp ~= 0.6.5"]

# safe is a target for optional dependencies without complex build requirements
# FIXME: torch and tensorflow are not exactly simple, depending on the platform
safe = [
  "control ~= 0.9.4",
  "pandas ~= 2.2",
  "pysindy ~= 1.7.5",
  "pytwin ~= 0.6.0",
  "sympy ~= 1.11.1",
  "tensorflow ~= 2.16.1",
  "torch ~= 2.3",
  "opencv-python-headless",                     # cv2
  "evosax ~= 0.1.6",
  "nlopt ~= 2.7; platform_machine == 'x86_64'",
  "matplotlib ~= 3.9",
]

# all dependencies used by collimator, including NMPC
all = [
  "control ~= 0.9.4",
  "cyipopt ~= 1.3.0",
  "osqp ~= 0.6.5",
  "pandas ~= 2.2",
  "pysindy ~= 1.7.5",
  "pytwin ~= 0.6.0",
  "sympy ~= 1.11.1",
  "tensorflow ~= 2.16.1",
  "torch ~= 2.3",
  "mujoco",
  "mujoco-mjx",
  "evosax ~= 0.1.6",
  "nlopt ~= 2.7; platform_machine == 'x86_64'",
  "matplotlib ~= 3.9",
  "opencv-python-headless",                     # cv2
]

# These are other libraries included in the environment for
# users' PythonScript blocks, but not directly used by this package
recommended = [
  "casadi ~= 3.6",
  "pybamm ~= 23.9; platform_system == 'Linux'",
  "roboticstoolbox-python ~= 1.1",
  "scikit-learn ~= 1.3",
  "spatialmath-python ~= 1.1",
  "sysidentpy ~= 0.3",
]
